--- a/download.html
+++ b/download.html
@@ -109,13 +109,8 @@
                                 </div>
                                 <div class="col-12 col-md-6">
                                     <div class="searchGroup input-group d-flex">
-                                        <div>
-                                            <input class="form-control me-2" type="search" placeholder="Search"
-                                                aria-label="Search">
-                                        </div>
-                                        <div>
-                                            <button class="btn" type="submit"><i class="bi bi-search"></i></button>
-                                        </div>
+                                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" value="">
+                                        <button class="btn" type="button"><i class="bi bi-search"></i></button>
                                     </div>
                                 </div>
                             </div>
@@ -154,8 +149,8 @@
                             <div class="col-12 col-md-6">
                                 <div class="downloadBtn">
                                     <div>
-                                        <h5>自行車與運動用品產業跨境電商報告</h5>
-                                        <p>eBay X Taiwantrade_Sporting Goods Report_下載版.pdf</p>
+                                        <h5>test</h5>
+                                        <p>eBay.pdf</p>
                                     </div>
                                     <div>
                                         <a href="111.pdf" download="111.pdf">
