--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
                         <span></span>
                     </div>
                 </h2>
-                <div class="row">
-                    <div class="col-sm-12 col-md-6 col-lg-3">
+                <div class="caseList">
+                    <div class="caseItem">
                         <figure class="card card_vv">
                             <a href="normal_article.html">
                                 <div class="card_img">
@@ -326,38 +326,32 @@
                                         alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-text">東方開發實業股份有限公司</p>
+                                    <p class="card-text">台灣經貿網海外樣品型錄展助威泛德天然乳膠瑜珈墊佈建日本市場</p>
                                 </div>
                             </a>
                         </figure>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-3">
                         <figure class="card card_vv">
                             <a href="normal_article.html">
                                 <div class="card_img">
-                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                    <img src="https://gd-dev.starworldtech.com.tw/gdSystemHub/gdweb/file/img/abdcee26-f2ac-418c-b798-9b6fb5cfd24c"
                                         alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-text">東方開發實業股份有限公司</p>
+                                    <p class="card-text">台灣經貿網海外樣品型錄展助威泛德天然乳膠瑜珈墊佈建日本市場</p>
                                 </div>
                             </a>
                         </figure>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-3">
                         <figure class="card card_vv">
                             <a href="normal_article.html">
                                 <div class="card_img">
-                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                    <img src="https://gd-dev.starworldtech.com.tw/gdSystemHub/gdweb/file/img/12e81691-5ef9-4e04-9f45-f7337dc2eaeb"
                                         alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-text">東方開發實業股份有限公司</p>
+                                    <p class="card-text">台灣經貿網海外樣品型錄展助威泛德天然乳膠瑜珈墊佈建日本市場</p>
                                 </div>
                             </a>
                         </figure>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-3">
                         <figure class="card card_vv">
                             <a href="normal_article.html">
                                 <div class="card_img">
@@ -365,7 +359,18 @@
                                         alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-text">東方開發實業股份有限公司</p>
+                                    <p class="card-text">台灣經貿網海外樣品型錄展助威泛德天然乳膠瑜珈墊佈建日本市場</p>
+                                </div>
+                            </a>
+                        </figure>
+                        <figure class="card card_vv">
+                            <a href="normal_article.html">
+                                <div class="card_img">
+                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                        alt="">
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text">台灣經貿網海外樣品型錄展助威泛德天然乳膠瑜珈墊佈建日本市場</p>
                                 </div>
                             </a>
                         </figure>
