--- a/case.html
+++ b/case.html
@@ -57,7 +57,7 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <figure class="card card_vv">
                                     <div class="card_img">
-                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                        <img src="https://gd-dev.starworldtech.com.tw/gdSystemHub/gdweb/file/img/6e0bb966-12d6-48d4-a2ce-d2fc4e0f4277"
                                             alt="">
                                     </div>
                                     <div class="card-body">
@@ -71,7 +71,7 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <figure class="card card_vv">
                                     <div class="card_img">
-                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                        <img src="https://gd-dev.starworldtech.com.tw/gdSystemHub/gdweb/file/img/abdcee26-f2ac-418c-b798-9b6fb5cfd24c"
                                             alt="">
                                     </div>
                                     <div class="card-body">
@@ -85,13 +85,12 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <figure class="card card_vv">
                                     <div class="card_img">
-                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
+                                        <img src="https://gd-dev.starworldtech.com.tw/gdSystemHub/gdweb/file/img/08a5b6b5-c048-4138-9ad3-00ed314e0618"
                                             alt="">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title Card title Card titleCard titleCard titleCard titleCard title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the Some quick example text to build on the card title and make up the bulk of theSome quick example text to build on the card title and make up the bulk of theSome quick example text to build on the card title and make up the bulk of the
-                                            card's content.</p>
+                                        <h5 class="card-title">經貿網助攻口罩達人拓海外 商機年年漲</h5>
+                                        <p class="card-text">華新醫材集團(Motex Healthcare Group)於1974年成立近50年，為國內知名與領導的醫療耗材製造廠商，並持續致力於研發各式醫用口罩、外科敷料及醫用手套等產品生產與銷售，以滿足國際不斷變化的醫療保健需求。 華新醫材集團董事長，素有「口罩達人」之稱的鄭永柱，以其資本、技術、人力資源，和獨到且先進的全球投資觀，不但使集團在確保對客戶的需求做出快速、具成本效益的回應，更因此鞏固其遍佈全球的分銷和服務網絡，為客戶提供最優質的客製化企業口罩、OEM及ODM一條龍服務。 卓越研發能力及創新價值一直是華新醫材的核心競爭優勢，回溯2003年SARS疫情爆發後，集團旗下「宣德醫材」採購設備投入生產醫用口罩，又於2020年疫情發生後華新醫材接受國家徵召成為台灣口罩國家隊主要成員，增設熔噴布產線並擴大生產口罩規模，提供壹億多片醫用口罩及千萬片N95口罩以供政府防疫徵用，成為全台瘋口罩，家喻戶曉年產數億片的「口罩王」，甚至連歐美媒體都來採訪！。 華新醫材多年來不斷推出各種創新優質口罩，諸如外科N95、FFP2、一般醫用平面款、C型3D口罩、4D魚型等眾多款式，其中又以全球獨創專利設計的「超立體鑽石型口罩」系列產品，奪得世界八大國家發明展金牌獎、2022金氏世界紀錄。尤其今年新推出「鑽石型N95口罩」是將平面口罩轉化為立體口罩，配戴時口罩四邊服貼於臉型、好呼吸又不悶熱，同時具有高透氣、高氣密、高過濾效率三大優質功能，搭配專利耳帶固定片及鼻部防漏貼片，此產品不僅成為民眾平日絕佳的防疫口罩，更是絕佳的醫用口罩發明，同時也分別獲得2008、2015、2018、2023年四次台灣精品獎殊榮。 華新醫材自2005年8月加入台灣經貿網，至今已是資深尊爵會員了，鄭永柱董事長經常表示，十分感謝貿協、感謝台灣經貿網的一路相伴，讓華新醫材有機會登上國際舞台，並透過Taiwantrade布建海外市場，行銷全球五大洲。在台灣經貿網協助下建置華新醫材企業網不斷優化產品內容、關鍵字及網站搜尋功能，並進行精準國外廣告投放，不但將華新醫材企業網提高曝光度達200%以上，更成功導引國外買主至Taiwantrade華新企業網，洽詢商機數年增率平均也超過50%以上，當然，華新醫材也積極運用台灣經貿網的線上虛擬展及線下實體展覽活動， 充分整合運用台灣經貿網所提供的OMO行銷資源，並深信根植台灣，放眼全球，跟著台灣經貿網做全球的生意，就對了! 華新醫材企業網:  https://motexglobal.en.taiwantrade.com/ https://motex.en.taiwantrade.com/</p>
                                         <a href="normal_article.html" class="btn">查看詳細</a>
                                     </div>
                                 </figure>
