--- a/news.html
+++ b/news.html
@@ -52,26 +52,41 @@
                                         <li><a href="news.html" class="active"><span>熱門文章</span></a></li>
                                         <li><a href="news_new.html"><span>最新文章</span></a></li>
                                         <li><a href="news_all.html"><span>分類文章</span></a>
-                                        <ul>
-                                            <li><a href="#">・跨境電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                            <li><a href="#">・東南亞電商</a></li>
-                                        </ul>
+                                            <ul>
+                                                <li><a href="news_all.html">・跨境電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                                <li><a href="news_all.html">・東南亞電商</a></li>
+                                            </ul>
                                         </li>
                                     </ul>
                                 </aside>
