驗收前調整

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>數位電商基地</title>
     <link href="./assets/css/bootstrap-icons.min.css" rel="stylesheet">
+    <link href="./assets/css/animate.min.css" rel="stylesheet">
     <link href="./assets/css/main.css" rel="stylesheet">
     <script src='./assets/js/jquery-3.4.1.min.js'></script>
     <script src="./assets/js/jquery.sidr.min.js"></script>
@@ -39,12 +40,12 @@
                         <picture>
                             <!-- pc -->
                             <source media="(min-width: 768px)"
-                                srcset="https://gd.taiwantrade.com/uploads/home_img1/6710bb730f6ae.jpg">
+                                srcset="./assets/uploads/673ad2b567717.jpg">
                             <!-- m -->
                             <source media="(max-width: 767px)"
-                                srcset="https://gd.taiwantrade.com/uploads/home_img1/6710bb730f6ae.jpg">
+                                srcset="./assets/uploads/673ad2b567717.jpg">
                             <!-- 如果瀏覽器不支援 <picture>，使用 img 作為備用 -->
-                            <img src="https://gd.taiwantrade.com/uploads/home_img1/6710bb730f6ae.jpg"
+                            <img src="./assets/uploads/673ad2b567717.jpg"
                                 class="d-block w-100" alt="">
                         </picture>
                     </div>
@@ -52,12 +53,12 @@
                         <picture>
                             <!-- pc -->
                             <source media="(min-width: 768px)"
-                                srcset="https://gd.taiwantrade.com/uploads/home_img2/6715f50f4fd1f.jpg">
+                                srcset="./assets/uploads/6715f50f4fd1f.jpg">
                             <!-- m -->
                             <source media="(max-width: 767px)"
-                                srcset="https://gd.taiwantrade.com/uploads/home_img2/6715f50f4fd1f.jpg">
+                                srcset="./assets/uploads/6715f50f4fd1f.jpg">
                             <!-- 如果瀏覽器不支援 <picture>，使用 img 作為備用 -->
-                            <img src="https://gd.taiwantrade.com/uploads/home_img2/6715f50f4fd1f.jpg"
+                            <img src="./assets/uploads/6715f50f4fd1f.jpg"
                                 class="d-block w-100" alt="">
                         </picture>
                     </div>
@@ -65,12 +66,12 @@
                         <picture>
                             <!-- pc -->
                             <source media="(min-width: 768px)"
-                                srcset="https://gd.taiwantrade.com/uploads/home_img3/6715e6728664e.jpg">
+                                srcset="./assets/uploads/673ad2c6d358f.jpg">
                             <!-- m -->
                             <source media="(max-width: 767px)"
-                                srcset="https://gd.taiwantrade.com/uploads/home_img3/6715e6728664e.jpg">
+                                srcset="./assets/uploads/673ad2c6d358f.jpg">
                             <!-- 如果瀏覽器不支援 <picture>，使用 img 作為備用 -->
-                            <img src="https://gd.taiwantrade.com/uploads/home_img3/6715e6728664e.jpg"
+                            <img src="./assets/uploads/673ad2c6d358f.jpg"
                                 class="d-block w-100" alt="">
                         </picture>
                     </div>
@@ -91,12 +92,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6">
-                        <img src="./assets/img/bg_intro_img.svg" alt="" class="img-fluid">
+                        <img src="./assets/img/bg_intro_img.svg" alt="" class="img-fluid wow fadeInUp" data-wow-duration="1.5s">
                     </div>
                     <div class="col-12 col-md-6">
-                        <h2>數位電商基地</h2>
-                        <h5>您的一站式電商資源補給站</h5>
-                        <p>想要做電商，卻不知從何開始嗎？經營電商不只是通路的轉換，而是一個完全改變營運思維的過程，需要持續的嘗試與學習，更需要有專業知識與資源的支持。想開創國際銷售新局勢，跨足電商市場嗎？讓「數位電商基地」成為您最強的後盾吧！
+                        <h2 class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".5s">數位電商基地</h2>
+                        <h5 class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".8s">您的一站式電商資源補給站</h5>
+                        <p class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1s">想要做電商，卻不知從何開始嗎？經營電商不只是通路的轉換，而是一個完全改變營運思維的過程，需要持續的嘗試與學習，更需要有專業知識與資源的支持。想開創國際銷售新局勢，跨足電商市場嗎？讓「數位電商基地」成為您最強的後盾吧！
                         </p>
                     </div>
                 </div>
@@ -114,7 +115,7 @@
         </section> 
         <section class="bg_news">
             <div class="container">
-                <h2 class="text-center">不能錯過的新知
+                <h2 class="text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">不能錯過的新知
                     <div class="lll">
                         <span></span>
                         <span></span>
@@ -125,7 +126,7 @@
                         <span></span>
                     </div>
                 </h2>
-                <div class="row">
+                <div class="row wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".7s">
                     <div class="col-12 col-md-6 col-xl-3">
                         <figure class="card card_vv">
                             <a href="normal_article.html">
@@ -201,19 +202,19 @@
                         </figure>
                     </div>
                 </div>
-                <div class="text-center">
+                <div class="text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".7s">
                     <a href="news.html" class="btn btn-lg btn-outline-light mx-auto">了解更多新知 <i
                             class="bi bi-arrow-right"></i></a>
                 </div>
             </div>
         </section>
-        <section class="bg_information">
+        <section class="bg_information wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".2s">
 
         <img src="./assets/img/bg_im_3.gif" alt="" class="bg_im_3">
         <img src="./assets/img/bg_im_3.gif" alt="" class="bg_im_4">
             <div class="container">
                 <div class="row">
-                    <h2>活動資訊
+                    <h2 class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".5s">活動資訊
                         <div class="lll">
                             <span></span>
                             <span></span>
@@ -225,7 +226,7 @@
                         </div>
                     </h2>
                     <div class="col-12 col-md-12 col-lg-8">
-                        <div class="information_box">
+                        <div class="information_box wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".5s">
                             <ul>
                                 <li>
                                     <a href="">
@@ -281,14 +282,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 information_banner">
+                    <div class="col-12 col-md-6 col-lg-4 information_banner wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".8s">
 
-                    <a href="">
-                        <img src="https://gd.taiwantrade.com/uploads/show_img1/6710d62524f11.jpg" alt=""
+                    <a href="" class=""><img src="https://gd.taiwantrade.com/uploads/show_img1/6710d62524f11.jpg" alt=""
                             class="img-fluid my-1"></a>
-                            <a href=""> <img src="https://gd.taiwantrade.com/uploads/show_img2/6710d7012eeb7.jpg" alt=""
+                    <a href=""> <img src="https://gd.taiwantrade.com/uploads/show_img2/6710d7012eeb7.jpg" alt=""
                             class="img-fluid my-2"></a>
-                            <a href=""><img src="https://gd.taiwantrade.com/uploads/show_img3/6710d88680bc3.png" alt=""
+                    <a href="" ><img src="https://gd.taiwantrade.com/uploads/show_img3/6710d88680bc3.png" alt=""
                             class="img-fluid my-1"></a>
                     </div>
                 </div>
@@ -306,7 +306,7 @@
         </div>
         <section class="bg_case">
             <div class="container">
-                <h2 class="text-center">成功案例
+                <h2 class="text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".5s">成功案例
                     <div class="lll">
                         <span></span>
                         <span></span>
@@ -317,8 +317,8 @@
                         <span></span>
                     </div>
                 </h2>
-                <div class="caseList">
-                    <div class="caseItem">
+                <div class="caseList wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".5s">
+                    <div class="caseItem wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".5s">
                         <figure class="card card_vv">
                             <a href="normal_article.html">
                                 <div class="card_img">
@@ -333,7 +333,7 @@
                         <figure class="card card_vv">
                             <a href="normal_article.html">
                                 <div class="card_img">
-                                    <img src="https://gd-dev.starworldtech.com.tw/gdSystemHub/gdweb/file/img/abdcee26-f2ac-418c-b798-9b6fb5cfd24c"
+                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
                                         alt="">
                                 </div>
                                 <div class="card-body">
@@ -344,7 +344,7 @@
                         <figure class="card card_vv">
                             <a href="normal_article.html">
                                 <div class="card_img">
-                                    <img src="https://gd-dev.starworldtech.com.tw/gdSystemHub/gdweb/file/img/12e81691-5ef9-4e04-9f45-f7337dc2eaeb"
+                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
                                         alt="">
                                 </div>
                                 <div class="card-body">
@@ -387,14 +387,24 @@
             </div>
         </section>
     </div>
-
     </div>
 
-    <footer></footer>
+    <footer class="wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".7s"></footer>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/wow.min.js"></script>
     <script>
         $("header").load("./layout/header.html");
         $("footer").load("./layout/footer.html");
+        wow = new WOW({
+                boxClass:     'wow',      // default
+                animateClass: 'animated', // default
+                offset:       0,          // default
+                mobile:       true,       // default
+                live:         true        // default
+            }
+        )
+        wow.init();
+
     </script>
 
 
