--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                                         alt="">
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-text">台灣經貿網海外樣品型錄展助威泛德天然乳膠瑜珈墊佈建日本市場</p>
+                                    <p class="card-text">台灣經貿網海外樣品型錄展助威</p>
                                 </div>
                             </a>
                         </figure>
